maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:72: error: Unmatched closing brace '}' ignored here
}
^